# nicla_vision_ros

./: .gitignore  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  LICENSE  README.md  niclabox_client.py  niclabox_server.py  package.xml  setup.py
calibration/: ost.txt  ost.yaml
client/: main.py  main_original.py  mjpeg_streamer_ap_1.py  ntp_1.py
config/rviz/: nicla.rviz
launch/: nicla_receiver.launch  nicla_sim.launch  nicla_tof_on_image.launch  niclabox_receiver.launch  niclabox_server.launch  tf_on_image.launch
nicla_code/: config.json  main.py
scripts/: NiclaReceiverServer.py  NiclaReceiverUDP.py  audio_player.py  audio_sub.py  deprojection_2D_to_3D.py  nicla_receiver.py  nicla_receiver_ros  nicla_receiver_ros.py  niclabox_server.py  niclabox_server_print _nosync.py  niclabox_server_print.py  niclabox_server_teleoperation.py  tf_on_image  tof_on_image  udpReceiver.py  udpSender.py
scripts/old/: nicla_receiver.py  niclabox_server.py  niclabox_server_debug.py  niclabox_server_debug_write_bin.py  niclabox_server_teleoperation.py  udp_niclabox_server_debug.py
scripts/ros2 /: nicla_receiver_ros2.py
src/nicla_vision_ros/: NiclaReceiverServer.py  NiclaReceiverServerMicroPy.py  NiclaReceiverServerSerial.py  NiclaRosPublisher.py  NiclaRosPublisher.py.orig  NiclaRosPublisherMicroPy.py  SpeechRecognizer.py  TFOnImage.py  TofOnImage.py  __init__.py
src/nicla_vision_ros/trials/: NiclaReceiverServerSerialHalf.py  NiclaReceiverServerSerialNoHalf.py  serial_freq.py  serial_receive.py  serial_send.py
urdf/: nicla.urdf.xacro  nicla_macro.urdf.xacro
urdf/meshes/: niclavision.dae  niclavision.stl
