<?xml version="1.0"?>
<package format="2">
  <name>niclabox</name>
  <version>0.0.0</version>
  <description>The niclabox package</description>

  <maintainer email="delbianco.edoardo@gmail.com">Edoardo Del Bianco</maintainer>
  <maintainer email="rollo.f96@gmail.com">Federico Rollo</maintainer>

  <author email="delbianco.edoardo@gmail.com">Edoardo Del Bianco</author>
  <author email="rollo.f96@gmail.com">Federico Rollo</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
