<?xml version="1.0"?>
<package format="2">
  <name>nicla_vision_ros</name>
  <version>1.0.0</version>
  <description>
    The nicla_vision_ros package is an integration of the Arduino Nicla Vision board in the ROS world. 
    Sensors data from the Nicla Vision is collected and trasmited to the relevant ROS topics
  </description>

  <maintainer email="toridebraus@gmail.com">Davide Torielli</maintainer>
  <maintainer email="damiano.gasperini98@gmail.com">Damiano Gasperini</maintainer>  

  <author email="toridebraus@gmail.com">Davide Torielli</author>
  <author email="damiano.gasperini98@gmail.com">Damiano Gasperini</author>  
  <author email="delbianco.edoardo@gmail.com">Edoardo Del Bianco</author>
  <author email="rollo.f96@gmail.com">Federico Rollo</author>

	<license>Apache License 2.0</license>

  <url type="repository">https://github.com/ADVRHumanoids/nicla_vision_ros/</url>
	<url type="bugtracker">https://github.com/ADVRHumanoids/nicla_vision_ros/issues/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>audio_common_msgs</depend>
  <depend>cv_bridge</depend>

</package>
